--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,15 @@
 *_genome*.vcf.gz
 *personal*.vcf.gz
 
-# Results files with actual data
+# Results files with actual data (PII)
 prs_results.csv
 prs_summary.txt
+prs_snp_level.csv
+rsid_mapping.tsv
+test_mapping.tsv
+rsid_list.txt
+data/results/
+data/mappings/
 
 # Cache files (may contain position mappings)
 rsid_positions_cache.json
@@ -46,5 +52,6 @@ nucleus/
 
 # Logs
 *.log
+logs/
 
 /NUCLEUS_ORIGIN_V1/
